--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BASE_URL = http://localhost:8080
+VITE_BASE_URL = https://api.simola.kampungmelonnapote.co.id/
 VITE_API_SIMAT = https://api.unira.ac.id/v1
